--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
-                        <h1>Landing Page</h1>
-                        <h3>A Template by Start Bootstrap</h3>
+                        <h1>Daniel Colangelo</h1>
+                        <h3>Web Development</h3>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li>
@@ -108,10 +108,10 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Web development<br>Modern technology</h2>
-                    <p class="lead">I'm a web developer that uses modern languages like HTML5, CSS, SASS, javascript and jquery to give websites life and depth to websites.</p>
+                    <p class="lead">I'm a web developer that uses modern languages like HTML5, CSS, SASS, javascript and jquery to make websites both appealing and functional.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive rounded-img" src="img/profile-img.jpg" alt="">
+                    <img class="img-responsive img-shadows" src="img/profile-img.jpg" alt="Photo of Daniel Colangelo">
                 </div>
             </div>
 
@@ -126,11 +126,11 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Death to the Stock Photo:<br>Special Thanks</h2>
-                    <p class="lead">A special thanks to <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a> for providing the photographs that you see in this template. Visit their website to become a member.</p>
+                    <h2 class="section-heading">Devslopes Login Portal<br><i class="fa fa-html5" aria-hidden="true"></i> <i class="fa fa-css3" aria-hidden="true"></i> Bootstrap</h2>
+                    <p class="lead">A fully responsive, mobile friendly login protal. Designed after the official login page from the <a href="http://devslopes.com">Devslopes</a> website. Image also provided by Devslopes.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/ipad.png" alt="">
+                    <img class="img-responsive img-shadows" src="img/login-portal-img.png" alt="Photo of a login portal">
                 </div>
             </div>
 
